--- a/lesson_5-5/index.html
+++ b/lesson_5-5/index.html
@@ -774,11 +774,12 @@
   <!-- Подключаем slick -->
   <link rel="stylesheet" href="js/slick/slick.css" />
   <link rel="stylesheet" href="js/slick/slick-theme.css" />
-  <!-- Подключаем JS slick -->
+  <!-- Подключаем JS slick --> 
+  
   <script src="js/slick/slick.min.js"></script>
   <!-- fotorama.css & fotorama.js. -->
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> 
+ <link href="fotorama-4.6.4/fotorama.css" rel="stylesheet">
+  <script src="fotorama-4.6.4/fotorama.js"></script> 
   <script src="js/main.js"></script>
 </body>
 
